--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ a:hover {
   width: 60px;
   height: 34px;
 }
-.btn-toogle-switch .switch input {
+.btn-toogle-switch .switchs input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -179,9 +179,12 @@ a:hover {
   display: flex;
   text-align: center;
   margin-top: 1rem;
+  padding: 1rem;
+}
+
+.headers {
   font-size: 2.13125rem;
   line-height: 2.77375rem;
-  padding: 1rem;
 }
 
 .p-1 {
@@ -202,7 +205,7 @@ a:hover {
   align-items: center;
   border-radius: 0.5rem;
   border: 1px solid #131022;
-  background: #131022;
+  background: var(--color-background-button);
 }
 
 .btn-google {
@@ -226,11 +229,12 @@ a:hover {
   justify-content: center;
   align-items: center;
   border-radius: 1.375rem;
-  border: 1px solid #FFF;
-  background: #FFF;
+  border: 1px solid var(--color-background-boxfb);
+  background: var(--color-background-boxfb);
 }
 
 .disc {
+  color: var(--color-text);
   display: flex;
   align-items: center;
   gap: 1.5rem;
@@ -250,30 +254,27 @@ a:hover {
   .part-2 {
     max-width: 720px;
     padding: 1.94rem;
-    height: 50rem;
+    height: 45rem;
     display: grid;
     grid-template-columns: repeat(12, minmax(0, 1fr));
     grid-template-rows: repeat(12, minmax(0, 1fr));
   }
   .h-1 {
     line-height: 3.6025rem;
-    grid-column: 2/12;
+    grid-column: 4/10;
     grid-row: 2/5;
   }
   .head-par-1 {
     margin-top: 2rem;
     line-height: 1.8rem;
     grid-column: 1/6;
-    grid-row: 7/10;
+    grid-row: 6/9;
   }
   #pic {
     display: block;
     grid-column: 5/12;
-    grid-row: 6/12;
-    -o-object-fit: fill;
-       object-fit: fill;
-    padding-left: 1rem;
-    padding-top: 2.3rem;
+    grid-row: 5/12;
+    padding-top: 3rem;
   }
   .btn-google {
     display: flex;
@@ -284,7 +285,7 @@ a:hover {
     align-items: center;
     border-radius: 0.5rem;
     border: 1px solid #131022;
-    background: #131022;
+    background: var(--color-background-button);
   }
   .btn-apple {
     margin-top: 1rem;
@@ -298,15 +299,6 @@ a:hover {
     border: 1px solid #131022;
     background: #131022;
   }
-  .disc {
-    display: flex;
-    margin: 0;
-    gap: 1rem;
-    border: none;
-    background: none;
-    grid-column: 1/4;
-    grid-row: 11/13;
-  }
   .apple-google-btns {
     display: flex;
     align-items: center;
@@ -314,7 +306,15 @@ a:hover {
     gap: 1rem;
     padding-left: 3rem;
     grid-column: 1/5;
-    grid-row: 10/11;
+    grid-row: 8/11;
+  }
+  .disc {
+    display: flex;
+    margin: 0;
+    gap: 1rem;
+    background: none;
+    grid-column: 1/5;
+    grid-row: 11/13;
   }
   .pic-desktop {
     display: none;
@@ -328,19 +328,19 @@ a:hover {
   .part-2 {
     max-width: 1320px;
   }
-  .head-par-1 {
-    margin-top: 1rem;
-    font-size: 1.125rem;
-    line-height: 1.8rem;
-    grid-column: 1/5;
-    grid-row: 5/7;
-  }
   .h-1 {
     text-align: start;
     font-size: 3.5rem;
     grid-column: 1/6;
     grid-row: 2/5;
     padding: 0;
+  }
+  .head-par-1 {
+    margin-top: 1rem;
+    font-size: 1.125rem;
+    line-height: 1.8rem;
+    grid-column: 1/5;
+    grid-row: 5/7;
   }
   .headers {
     color: var(--color-text);
@@ -364,13 +364,13 @@ a:hover {
     justify-content: flex-start;
     padding: 2rem 0 5rem 0;
     grid-column: 1/5;
-    grid-row: 7/9;
+    grid-row: 8/9;
   }
   #pic {
     display: block;
     grid-column: 5/12;
     grid-row: 1/12;
-    padding: 5rem 0 0 6rem;
+    padding: 0 0 0 7rem;
   }
   #pic img {
     height: 43rem;
@@ -396,6 +396,7 @@ a:hover {
 }
 
 .header-features {
+  color: var(--color-text);
   padding: 2rem;
   font-size: 1.74375rem;
   font-weight: 800;
@@ -416,6 +417,7 @@ a:hover {
 
 .parent-logo-text p {
   line-height: 1.6rem;
+  padding-top: 1rem;
 }
 
 .position-text-pic {
@@ -820,7 +822,7 @@ a:hover {
     z-index: 1;
   }
   .box {
-    background: rgba(255, 255, 255, 0.04);
+    background: var(--color-background-boxfb);
     border: 1px transparent;
     border-radius: 0.5rem;
     width: 26rem;
@@ -899,8 +901,8 @@ a:hover {
   justify-content: center;
   align-items: center;
   border-radius: 1.375rem;
-  border: 1px solid #FFF;
-  background: #F3F6FF;
+  border: 1px solid var(--color-background-chevron);
+  background: var(--color-background-chevron);
 }
 
 .box-accordion {
@@ -911,8 +913,8 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #fff;
-  color: #131022;
+  background-color: var(--color-background-boxfb);
+  color: var(--color-text);
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -928,12 +930,12 @@ a:hover {
 }
 
 .active, .accordion:hover {
-  background-color: #fff;
+  background-color: var(--color-background-boxfb);
 }
 
 .panel {
   padding: 0 18px;
-  background-color: white;
+  background-color: var(--color-background-boxfb);
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
@@ -989,7 +991,7 @@ a:hover {
     display: block;
     display: grid;
     gap: 1.5rem;
-    border: 1px solid #e9eefe;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 0.5rem;
     width: 21rem;
     height: 11rem;
@@ -999,7 +1001,6 @@ a:hover {
     color: green;
   }
   .box-accordion {
-    display: inherit;
     gap: 0.5rem;
   }
 }
@@ -1084,7 +1085,8 @@ input::placeholder {
 }
 
 .form-input {
-  border: 1px solid rgb(216, 216, 218);
+  background-color: var(--color-background-blue);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   border-radius: 10px;
   padding: 1.3rem 1rem;
   width: 100%;
@@ -1179,13 +1181,27 @@ html[data-theme=light] {
   --color-background: #fff;
   --color-background-blue: #F3F6FF;
   --color-background-pink: radial-gradient(118% 116.18% at 50% 100%, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 41.83%, rgba(241, 244, 253, 0.07) 82.52%);
+  --color-background-boxfb: #fff;
+  --color-background-chevron: #F3F6FF;
+  --color-background-button: #131022;
 }
 
 html[data-theme=dark] {
   --color-text: #fff;
   --color-background: #131022;
-  --color-background-blue: #131022;
+  --color-background-blue: rgba(255, 255, 255, 0.04);
   --color-background-pink: #131022;
+  --color-background-boxfb: rgba(255, 255, 255, 0.04);
+  --color-background-chevron: rgba(255, 255, 255, 0.04);
+  --color-background-button: #fff;
+}
+
+html[data-theme=light] .logo-apple {
+  content: url("../images/icons/appstore-light.svg");
+}
+
+html[data-theme=dark] .logo-apple {
+  content: url("../images/icons/appstore-dark.svg");
 }
 
 body {
