--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -18,7 +18,7 @@ a:hover {
       }
       
       /* copy from W3 school */
-      .switch input {
+      .switchs input {
         opacity: 0;
         width: 0;
         height: 0;
