--- a/styles/_part-3.scss
+++ b/styles/_part-3.scss
@@ -17,6 +17,7 @@
 }
 
 .header-features {
+    color: var(--color-text);
     padding: 2rem;
     font-size: 1.74375rem;
     font-weight: 800;
@@ -37,7 +38,7 @@
 
 .parent-logo-text p {
     line-height: 1.6rem;
-
+    padding-top: 1rem;
 }
 
 .position-text-pic{
