--- a/styles/_part-6-onlydesktop.scss
+++ b/styles/_part-6-onlydesktop.scss
@@ -57,7 +57,7 @@
         z-index: 1;
     }
     .box {
-        background: rgba(255, 255, 255, 0.04);
+        background: var(--color-background-boxfb);
         border: 1px transparent;
         border-radius: 0.5rem;
         width: 26rem;
