--- a/styles/_part-7.scss
+++ b/styles/_part-7.scss
@@ -21,8 +21,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 1.375rem;
-    border: 1px solid #FFF;
-    background: #F3F6FF;
+    border: 1px solid var(--color-background-chevron);
+    background: var(--color-background-chevron);
 }
 
 .box-accordion {
@@ -33,8 +33,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #fff;
-    color: #131022;
+    background-color: var(--color-background-boxfb);
+    color: var(--color-text);
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -51,12 +51,12 @@
 
   
   .active, .accordion:hover {
-    background-color: #fff; 
+    background-color: var(--color-background-boxfb); 
   }
   
   .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: var(--color-background-boxfb);
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
@@ -113,7 +113,7 @@
     display: block;
     display: grid;
     gap: 1.5rem;
-    border: 1px solid #e9eefe;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 0.5rem;
     width: 21rem;
     height: 11rem;
@@ -124,7 +124,6 @@
     color: green;
   }
   .box-accordion {
-    display: inherit;
     gap: 0.5rem;
   }
 
