--- a/styles/_part-8.scss
+++ b/styles/_part-8.scss
@@ -33,7 +33,8 @@ input::placeholder {
     margin: 1rem;
 } 
 .form-input {
-    border: 1px solid rgb(216, 216, 218);
+    background-color: var(--color-background-blue);
+    border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 10px;
     padding: 1.3rem 1rem;
     width: 100%;
