--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,8 @@ $light-text: #fff;
 $color-grey: #9397AD;
 $color-dark: #131022;
 $bgp3: #F3F6FF;
+$boxfb: rgba(255, 255, 255, 0.04);
+$chevron: #F3F6FF;
 
 
 $container-padding: 2rem 2rem 2rem 0;
@@ -12,4 +14,8 @@ $margin-base: 0 auto;
 // light-dark mode
 $dark: #131022;
 $light: #fff;
+
+
+$light-icon: url('../images/icons/appstore-light.svg');
+$dark-icon: url('../images/icons/appstore-dark.svg');
 
