--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,13 +17,29 @@ html[data-theme="light"] {
     --color-background: #{$light};
     --color-background-blue: #{$bgp3};
     --color-background-pink: #{$bgP1};
+    --color-background-boxfb: #{$light};
+    --color-background-chevron: #{$chevron};
+    --color-background-button: #{$color-dark};
+    
 }
 
 html[data-theme="dark"] {
     --color-text: #{$light};
     --color-background: #{$dark};
-    --color-background-blue: #{$dark};
+    --color-background-blue: #{$boxfb};
     --color-background-pink: #{$dark};
+    --color-background-boxfb: #{$boxfb};
+    --color-background-chevron: #{$boxfb};
+    --color-background-button: #{$light};
+    
+}
+
+html[data-theme="light"] .logo-apple {
+    content: url('../images/icons/appstore-light.svg');
+}
+
+html[data-theme="dark"] .logo-apple {
+    content: url('../images/icons/appstore-dark.svg');
 }
 
 
