--- a/styles/_part-7.scss
+++ b/styles/_part-7.scss
@@ -113,7 +113,7 @@
     display: block;
     display: grid;
     gap: 1.5rem;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: 1px solid #E2E5F1;
     border-radius: 0.5rem;
     width: 21rem;
     height: 11rem;
