--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,6 +6,7 @@ $color-dark: #131022;
 $bgp3: #F3F6FF;
 $boxfb: rgba(255, 255, 255, 0.04);
 $chevron: #F3F6FF;
+$support-grey: #E2E5F1;
 
 
 $container-padding: 2rem 2rem 2rem 0;
