--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -134,6 +134,15 @@ a:hover {
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+#logo {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: var(--color-text);
+    text-decoration: none;
+}
 
 @media (min-width: 768px) {
     #container-1 {
