--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,6 +20,7 @@ html[data-theme="light"] {
     --color-background-boxfb: #{$light};
     --color-background-chevron: #{$chevron};
     --color-background-button: #{$color-dark};
+    --color-text-buttons: #{$light};
     
 }
 
@@ -31,6 +32,7 @@ html[data-theme="dark"] {
     --color-background-boxfb: #{$boxfb};
     --color-background-chevron: #{$boxfb};
     --color-background-button: #{$light};
+    --color-text-buttons: #{$dark};
     
 }
 
