--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -1,7 +1,6 @@
 .section-2 {
     background: var(--color-background-pink);
     border: 1px solid #000;
-    
 }
 
 .part-2 {
@@ -36,7 +35,6 @@
         margin-top: 1rem;
         width: 100%;
         height: 3.15063rem;
-        padding: 0.66563rem 1.05rem 0.55rem 1.05rem;
         border-radius: 0.5rem;
         border: 1px solid #131022;
         background: var(--color-background-button);
@@ -47,10 +45,10 @@
         flex-direction: column;
     }
     .download {
-        font-size: 8px;
+        font-size: 11px;
     }
     .store {
-        font-size: 9px;
+        font-size: 18px;
         font-weight: 800;
     }
     .fa-brands {
@@ -62,7 +60,6 @@
         display: flex;
         width: 100%;
         height: 3.15063rem;
-        padding: 0.55rem 7.575rem;
         justify-content: center;
         align-items: center;
         border-radius: 0.5rem;
@@ -139,10 +136,10 @@
         flex-direction: column;
     }
     .download {
-        font-size: 7px;
+        font-size: 10px;
     }
     .store {
-        font-size: 11px;
+        font-size: 14px;
         font-weight: 800;
     }
     .fa-brands {
@@ -216,6 +213,13 @@
         padding: 2rem 0 5rem 0;
         grid-column: 1 / 5;
         grid-row: 8 / 9;
+    }
+    .download {
+        font-size: 12px;
+    }
+    .store {
+        font-size: 18px;
+        font-weight: 800;
     }
     #pic {
         display: block;
