--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,7 @@ a:hover {
   background-color: transparent;
   border: none;
   font-size: 2rem;
+  color: var(--color-text);
 }
 
 .nav-link {
@@ -213,7 +214,6 @@ a:hover {
   margin-top: 1rem;
   width: 100%;
   height: 3.15063rem;
-  padding: 0.66563rem 1.05rem 0.55rem 1.05rem;
   border-radius: 0.5rem;
   border: 1px solid #131022;
   background: var(--color-background-button);
@@ -226,11 +226,11 @@ a:hover {
 }
 
 .download {
-  font-size: 8px;
+  font-size: 11px;
 }
 
 .store {
-  font-size: 9px;
+  font-size: 18px;
   font-weight: 800;
 }
 
@@ -244,7 +244,6 @@ a:hover {
   display: flex;
   width: 100%;
   height: 3.15063rem;
-  padding: 0.55rem 7.575rem;
   justify-content: center;
   align-items: center;
   border-radius: 0.5rem;
@@ -321,10 +320,10 @@ a:hover {
     flex-direction: column;
   }
   .download {
-    font-size: 7px;
+    font-size: 10px;
   }
   .store {
-    font-size: 11px;
+    font-size: 14px;
     font-weight: 800;
   }
   .fa-brands {
@@ -395,6 +394,13 @@ a:hover {
     padding: 2rem 0 5rem 0;
     grid-column: 1/5;
     grid-row: 8/9;
+  }
+  .download {
+    font-size: 12px;
+  }
+  .store {
+    font-size: 18px;
+    font-weight: 800;
   }
   #pic {
     display: block;
