--- a/styles/_part-3.scss
+++ b/styles/_part-3.scss
@@ -81,12 +81,17 @@
         justify-content: center;
         align-items: center;
     }
+    .header-features {
+        font-size: 2.0rem;
+        
+    }
     .parent-logo-text {
         display: grid;
         grid-template-columns: repeat(2, auto);
         gap: 1rem;
         
     }
+
 }
 
 @media (min-width: 1400px) {
@@ -132,7 +137,7 @@
     }
     .header-features {
         padding: 1rem;
-        font-size: 1.74375rem;
+        font-size: 2.5rem;
         font-weight: 800;
         line-height: 2.26313rem;
     }
