--- a/styles/_part-5-onlydesktop.scss
+++ b/styles/_part-5-onlydesktop.scss
@@ -55,10 +55,12 @@
         gap: 1rem;
     }
     .btn-1 {
+        padding-top: 1rem;
         grid-column: 4 / 7;
         grid-row: 9 / 10;
     }
     .btn-2 {
+        padding-top: 2rem;
         grid-column: 14 / 17;
         grid-row: 21 / 22;
     }
