--- a/styles/_part-7.scss
+++ b/styles/_part-7.scss
@@ -25,10 +25,15 @@
     background: var(--color-background-chevron);
 }
 
-.box-accordion {
-  gap: 1.5rem;
+.active .fa-chevron-down {
+  transform: rotate(180deg);
 }
-
+html[data-theme="light"] .active .fa-chevron-down  {
+  color: #fff;
+}
+.active .btn-accordion {
+  background-color: #6366F1;
+}
 .accordion {
     display: flex;
     align-items: center;
@@ -45,11 +50,18 @@
     font-style: normal;
     transition: 0.4s;
     box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
-    border-radius: 0.4375rem 0.4375rem 0rem 0rem;
+    border-radius: 0.5rem;
     line-height: 1.3rem;
   }
 
-  
+  .panel {
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+  }
+  .panel p {
+    padding: 1rem 1rem 1rem 0;
+  }
+
   .active, .accordion:hover {
     background-color: var(--color-background-boxfb); 
   }
@@ -119,8 +131,16 @@
     height: 11rem;
     padding: 1.5rem;
   }
-  .contact-chat {
+  html[data-theme="dark"] .box1-support  {
+    border: 1px solid rgba(255, 255, 255, 0.15);
+  }
+  .contact-chats2 {
     color: green;
+    padding-right: 0.5rem;
+  }
+  .contact-chats1 {
+    color: #6366F1;
+    padding-right: 0.5rem;
   }
   .box-accordion {
     gap: 0.5rem;
@@ -149,6 +169,7 @@
       width: 13rem;
     }
     .part-7 h2 {
+      font-size: 2rem;
       text-align: start;
       grid-column: 1 / 4;
       grid-row: 2 / 3;
