--- a/styles/style.css
+++ b/styles/style.css
@@ -492,6 +492,9 @@ a:hover {
     justify-content: center;
     align-items: center;
   }
+  .header-features {
+    font-size: 2rem;
+  }
   .parent-logo-text {
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -537,7 +540,7 @@ a:hover {
   }
   .header-features {
     padding: 1rem;
-    font-size: 1.74375rem;
+    font-size: 2.5rem;
     font-weight: 800;
     line-height: 2.26313rem;
   }
@@ -573,6 +576,7 @@ a:hover {
 }
 
 .transaction-head2 {
+  font-size: 2.5rem;
   text-align: center;
   padding-top: 3rem;
 }
@@ -755,10 +759,12 @@ a:hover {
     gap: 1rem;
   }
   .btn-1 {
+    padding-top: 1rem;
     grid-column: 4/7;
     grid-row: 9/10;
   }
   .btn-2 {
+    padding-top: 2rem;
     grid-column: 14/17;
     grid-row: 21/22;
   }
@@ -941,8 +947,16 @@ a:hover {
   background: var(--color-background-chevron);
 }
 
-.box-accordion {
-  gap: 1.5rem;
+.active .fa-chevron-down {
+  transform: rotate(180deg);
+}
+
+html[data-theme=light] .active .fa-chevron-down {
+  color: #fff;
+}
+
+.active .btn-accordion {
+  background-color: #6366F1;
 }
 
 .accordion {
@@ -961,8 +975,17 @@ a:hover {
   font-style: normal;
   transition: 0.4s;
   box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
-  border-radius: 0.4375rem 0.4375rem 0rem 0rem;
+  border-radius: 0.5rem;
   line-height: 1.3rem;
+}
+
+.panel {
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
+.panel p {
+  padding: 1rem 1rem 1rem 0;
 }
 
 .active, .accordion:hover {
@@ -1033,8 +1056,16 @@ a:hover {
     height: 11rem;
     padding: 1.5rem;
   }
-  .contact-chat {
+  html[data-theme=dark] .box1-support {
+    border: 1px solid rgba(255, 255, 255, 0.15);
+  }
+  .contact-chats2 {
     color: green;
+    padding-right: 0.5rem;
+  }
+  .contact-chats1 {
+    color: #6366F1;
+    padding-right: 0.5rem;
   }
   .box-accordion {
     gap: 0.5rem;
@@ -1063,6 +1094,7 @@ a:hover {
     width: 13rem;
   }
   .part-7 h2 {
+    font-size: 2rem;
     text-align: start;
     grid-column: 1/4;
     grid-row: 2/3;
@@ -1106,11 +1138,13 @@ a:hover {
 }
 
 input::-moz-placeholder {
-  text-align: start;
+  padding-left: 1rem;
+  justify-content: flex-start;
 }
 
 input::placeholder {
-  text-align: start;
+  padding-left: 1rem;
+  justify-content: flex-start;
 }
 
 .input-icon {
@@ -1120,11 +1154,19 @@ input::placeholder {
   margin: 1rem;
 }
 
+.fa-envelope {
+  position: absolute;
+  top: 50%;
+  left: 0.5rem;
+  transform: translateY(-50%);
+  color: var(--color-envelope);
+}
+
 .form-input {
   background-color: #fff;
   border: 1px solid rgba(255, 255, 255, 0.18);
   border-radius: 10px;
-  padding: 1.3rem 1rem;
+  padding: 1rem 1.7rem;
   width: 100%;
 }
 
@@ -1200,6 +1242,13 @@ input::placeholder {
   .form-input {
     background-color: var(--color-background-boxfb);
   }
+  .fa-envelope {
+    position: absolute;
+    top: 50%;
+    left: 0.5rem;
+    transform: translateY(-50%);
+    color: var(--color-envelope);
+  }
 }
 .footer {
   display: flex;
@@ -1224,6 +1273,7 @@ html[data-theme=light] {
   --color-background-chevron: #F3F6FF;
   --color-background-button: #131022;
   --color-text-buttons: #fff;
+  --color-envelope: #9397AD;
 }
 
 html[data-theme=dark] {
@@ -1235,14 +1285,7 @@ html[data-theme=dark] {
   --color-background-chevron: rgba(255, 255, 255, 0.04);
   --color-background-button: #fff;
   --color-text-buttons: #131022;
-}
-
-html[data-theme=light] .logo-apple {
-  content: url("../images/icons/appstore-light.svg");
-}
-
-html[data-theme=dark] .logo-apple {
-  content: url("../images/icons/appstore-dark.svg");
+  --color-envelope: #9397AD;
 }
 
 body {
