--- a/styles/_part-7.scss
+++ b/styles/_part-7.scss
@@ -54,10 +54,6 @@ html[data-theme="light"] .active .fa-chevron-down  {
     line-height: 1.3rem;
   }
 
-  .panel {
-    margin-bottom: 1rem;
-    border-radius: 0.5rem;
-  }
   .panel p {
     padding: 1rem 1rem 1rem 0;
   }
@@ -72,6 +68,8 @@ html[data-theme="light"] .active .fa-chevron-down  {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
   }
 
   .btn-support {
@@ -142,17 +140,14 @@ html[data-theme="light"] .active .fa-chevron-down  {
     color: #6366F1;
     padding-right: 0.5rem;
   }
-  .box-accordion {
-    gap: 0.5rem;
-  }
 
   @media (min-width: 1400px) {
     .part-7 {
       max-width: 1320px;
       display: grid;
-      grid-template-columns: repeat(12, minmax(0, 1fr));
+      grid-template-columns: repeat(12, minmax(0, 1fr)); 
       grid-template-rows: repeat(12, minmax(0, 1fr));
-      height: 45rem;
+      padding: 0;
     }
     .boxes-suport {
       display: flex;
@@ -163,7 +158,7 @@ html[data-theme="light"] .active .fa-chevron-down  {
     }
     .box-accordion {
       grid-column: -1 / 7;
-      grid-row: 2 / 10;
+      grid-row: 2 / 9;
     }
     #box-2 {
       width: 13rem;
