--- a/styles/style.css
+++ b/styles/style.css
@@ -979,11 +979,6 @@ html[data-theme=light] .active .fa-chevron-down {
   line-height: 1.3rem;
 }
 
-.panel {
-  margin-bottom: 1rem;
-  border-radius: 0.5rem;
-}
-
 .panel p {
   padding: 1rem 1rem 1rem 0;
 }
@@ -998,6 +993,8 @@ html[data-theme=light] .active .fa-chevron-down {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
 }
 
 .btn-support {
@@ -1067,9 +1064,6 @@ html[data-theme=light] .active .fa-chevron-down {
     color: #6366F1;
     padding-right: 0.5rem;
   }
-  .box-accordion {
-    gap: 0.5rem;
-  }
 }
 @media (min-width: 768px) and (min-width: 1400px) {
   .part-7 {
@@ -1077,7 +1071,7 @@ html[data-theme=light] .active .fa-chevron-down {
     display: grid;
     grid-template-columns: repeat(12, minmax(0, 1fr));
     grid-template-rows: repeat(12, minmax(0, 1fr));
-    height: 45rem;
+    padding: 0;
   }
   .boxes-suport {
     display: flex;
@@ -1088,7 +1082,7 @@ html[data-theme=light] .active .fa-chevron-down {
   }
   .box-accordion {
     grid-column: -1/7;
-    grid-row: 2/10;
+    grid-row: 2/9;
   }
   #box-2 {
     width: 13rem;
