--- a/styles/_part-7.scss
+++ b/styles/_part-7.scss
@@ -34,6 +34,7 @@ html[data-theme="light"] .active .fa-chevron-down  {
 .active .btn-accordion {
   background-color: #6366F1;
 }
+// code taken from w3 with modification from me
 .accordion {
     display: flex;
     align-items: center;
