--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -223,13 +223,13 @@
     }
     #pic {
         display: block;
-        grid-column: 5 / 12;
+        grid-column: 6 / 12;
         grid-row: 1 / 12;
         padding: 0 0 0 7rem;
        
         img {
             height: 43rem;
-            width: 39.46;
+            width: 39.46rem;
         }
     }
 }
