--- a/styles/_part-3.scss
+++ b/styles/_part-3.scss
@@ -66,7 +66,11 @@
         gap: 1rem;
     }
 
-    #desktop-only {
+    #desktop-only1 {
+        display: none;
+    }
+
+    #desktop-only2 {
         display: none;
     }
 
@@ -101,7 +105,11 @@
         height: 69rem;
         
     }
-    #desktop-only {
+    #desktop-only1 {
+        display: block;
+    }
+
+    #desktop-only2 {
         display: block;
     }
     .phone-features {
