--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -65,6 +65,10 @@
         border-radius: 0.5rem;
         border: 1px solid #131022;
         background: var(--color-background-button);
+        gap: 0.5rem;
+    }
+    .btn-google img {
+        padding-left: 1rem;
     }
     .discover-more {
         display: flex;
