--- a/styles/style.css
+++ b/styles/style.css
@@ -249,6 +249,11 @@ a:hover {
   border-radius: 0.5rem;
   border: 1px solid #131022;
   background: var(--color-background-button);
+  gap: 0.5rem;
+}
+
+.btn-google img {
+  padding-left: 1rem;
 }
 
 .discover-more {
