feature : final touch

--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -130,6 +130,9 @@
         width: 7.875rem;
         height: 2.74375rem;
     }
+    .btn-google img {
+        padding-left: 0;
+    }
     .btn-apple {
         margin-top: 1rem;
         width: 7.875rem;
