--- a/styles/style.css
+++ b/styles/style.css
@@ -315,6 +315,9 @@ a:hover {
     width: 7.875rem;
     height: 2.74375rem;
   }
+  .btn-google img {
+    padding-left: 0;
+  }
   .btn-apple {
     margin-top: 1rem;
     width: 7.875rem;
