Feature: ready for delivery

--- a/styles/_part-5-onlydesktop.scss
+++ b/styles/_part-5-onlydesktop.scss
@@ -54,6 +54,9 @@
         grid-row: 18 / 21;
         gap: 1rem;
     }
+    .card-folder p {
+        padding-top: 1rem;
+    }
     .btn-1 {
         padding-top: 1rem;
         grid-column: 4 / 7;
