--- a/styles/_part-2.scss
+++ b/styles/_part-2.scss
@@ -200,6 +200,7 @@
     .headers {
         color: var(--color-text);
         font-size: 3.5rem;
+        line-height: 4.55rem;
     }
     .p-1 {
         text-align: start;
